@@ -1,3 +1,7 @@
+2011-05-06  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/cpp0x/constexpr-48089.C: New.
+
 2011-05-06  Dodji Seketeli  <dodji@redhat.com>
 
     	PR c++/48838
