@@ -1,3 +1,10 @@
+2011-05-06  Jason Merrill  <jason@redhat.com>
+
+	PR c++/48089
+	* semantics.c (potential_constant_expression_1): Don't allow *this
+	in a constructor.
+	(register_constexpr_fundef): Use potential_rvalue_constant_expression.
+
 2011-05-06  Dodji Seketeli  <dodji@redhat.com>
 
     	PR c++/48838
